# Leibniz

./: CMakeLists.txt  Init.c  Leibniz.c  Leibniz.h
